# msa3d

./: .gitignore  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
MSA3D/: __init__.py  run_msa3d.py
MSA3D/cube_build/: build_7_exposures.py  combine_crossdisp.py
MSA3D/nsclean/: NSClean1.py
MSA3D/pre_processing/: clean_bkg.py  stsci_stage1.py
MSA3D/processing/: __init__.py  jwst_nirspec_pathloss_0002.fits  post_processing.py  stsci_stage2.py  transform_msa_sourceids.py
notebooks/: run_msa3d_notebook.ipynb
src/msa3d/: __init__.py  run_msa3d.py
src/msa3d/nsclean/: README
src/msa3d/pre_processing/: clean_bkg.py
src/msa3d/processing/: post_processing.py
