[project]
name = "msa3d"
description = "data reduction and cube design for the JWST slit-stepping survey GO-2136 and future surveys"
license = {file = "LICENSE"}
readme = "README.md"
version = "0.0.1"
authors = [
    {name = "Ivana Barisic", email = "ibarisic@ucdavis.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD-3 License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "astroscrappy",
    "h5py",
    "jupyter",
    "jupyterlab",
    "jwst",
    "msaexp",
    "numpy<2.0",
    "pandas",
    "scipy",
    
]
[project.urls]
"Source Code" = "https://github.com/barisiciv/msa3d"


[build-system]

requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
    #"oldest-supported-numpy",
    #"cython>=0.29.14"
]

#stuff to include package data, if needed
[tool.setuptools.package-data]
"*" = ["*.fits"]
"MSA3D" = ["*.fits"]

#build-backend = 'setuptools.build_meta'
